--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body {
     text-align: left;
     margin-left: 10px;
     margin-top:10px;
-    font-size: 14px;
+    font-size: 2em;
     display: none;
+    color: rgb(176, 48, 48);
 }
